--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 * {
   box-sizing: border-box;
+  
 }
 
 /* Nav Bar */
@@ -30,7 +31,7 @@ li a:hover {
 
 /* Center website */
 body {
-  background-color:  #f1f1f1;
+  background-color:  #ffffff;
   padding: 20px;
   font-family: Arial;
 }
@@ -78,7 +79,15 @@ h1 {
   box-shadow: 10px 10px 5px #aaaaaa;
   margin: 20px;
 }
-
+.content2 {
+  border-style: solid;
+  border-width: 1px;
+  height: 245px;
+  padding: 10px;
+  flex: 0 0 300px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
+}
 
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -104,4 +113,14 @@ h1 {
   color: white;
   text-align: center;
   
+}
+
+#gh {
+  color: white;
+}
+#li {
+  color: white;
+}
+#resume {
+  color: white;
 }
