--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
 
-* {
-  box-sizing: border-box;
-  
-}
-
 /* Nav Bar */
 ul {
+  text-align: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  border-radius: 20px;
 }
 
 li {
@@ -23,28 +20,53 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: Century Gothic;
 }
 
 li a:hover {
   background-color: #111;
 }
 
-/* Center website */
 body {
-  background-color:  #ffffff;
-  padding: 20px;
-  font-family: Arial;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 
 .main {
   max-width: 1000px;
   margin: auto;
+  text-align:center
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 40px;
   word-break: break-all;
+  font-family: Century Gothic;
+  text-align:center
+}
+
+h2 {
+  font-size: 25px;
+  font-family: Century Gothic;
+}
+
+p {
+  font-family: Century Gothic;
 }
 
 .row {
@@ -124,3 +146,4 @@ h1 {
 #resume {
   color: white;
 }
+
